src/test/fun-test/semantic/MultipleVariableDecl.java.err
Semantic error: multiple declaration of variable foo, line 4, pos 19
