src/test/fun-test/semantic/MultipleVariableDecl.java
class Main {
    void main() {
        int foo;
        double foo;
    }
}